--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-Django==1.11
+asgiref==3.2.10
+Django==3.1.2
+django-bootstrap3==14.1.0
+Pillow==7.2.0
+psycopg2==2.8.6
 pytz==2020.1
+sqlparse==0.4.1
