--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.2.10
+dj-database-url==0.5.0
 Django==3.1.2
 django-bootstrap3==14.1.0
+django-heroku==0.3.1
 Pillow==7.2.0
 psycopg2==2.8.6
 pytz==2020.1
 sqlparse==0.4.1
+whitenoise==5.2.0
