--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-bootstrap3==14.1.0
 django-heroku==0.3.1
 Pillow==7.2.0
 psycopg2==2.8.6
+python-decouple==3.3
 pytz==2020.1
 sqlparse==0.4.1
 whitenoise==5.2.0
