--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==3.1.2
 django-bootstrap3==14.1.0
 django-heroku==0.3.1
+gunicorn==20.0.4
 Pillow==7.2.0
 psycopg2==2.8.6
 python-decouple==3.3
