--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 SECRET_KEY = ')!eo7wnm-(4#l-cx*h)ijgx$l(@+@g)ien_u_m75iv7v^uqgj7'
-DEBUG=True #set to false in production
+DEBUG=false
 DB_NAME='tribune'
 DB_USER='user'
 DB_PASSWORD='password'
 DB_HOST='127.0.0.1'
-MODE='dev' #set to 'prod' in production
+MODE='dev'
 ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
 DISABLE_COLLECTSTATIC=1
