changed from false to True

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY = ')!eo7wnm-(4#l-cx*h)ijgx$l(@+@g)ien_u_m75iv7v^uqgj7'
-DEBUG=false
+DEBUG=True
 DB_NAME='tribune'
 DB_USER='user'
 DB_PASSWORD='password'
